// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - outputType - criticalCss - GetFonts should match snapshot for arcSite = "foodit" 1`] = `
<div>
  <style
    id="critical-fonts"
  >
    
@font-face {font-family:'Prumo';src:url('/pf/resources/fonts/prumo/Prumo-LNVF.woff2') format('woff2-variations'); font-weight: 90; font-display: optional;}
@font-face {font-family:'Roboto';src:url('/pf/resources/fonts/roboto/Roboto-Light.woff2') format('woff2-variations'); font-weight: 300; font-display: swap;}
@font-face {font-family:'Roboto';src:url('/pf/resources/fonts/roboto/Roboto-Regular.woff2') format('woff2-variations'); font-weight: 400; font-display: optional;}}
@font-face {font-family:'Roboto';src:url('/pfundefined') format('woff2-variations'); font-weight: 500; font-display: optional;}
@font-face {font-family:'Roboto';src:url('/pf/resources/fonts/roboto/Roboto-Bold.woff2') format('woff2-variations'); font-weight: 700; font-display: optional;}

  </style>
</div>
`;

exports[`Components - outputType - criticalCss - GetFonts should match snapshot for arcSite = "la-nacion-ar" 1`] = `
<div>
  <style
    id="critical-fonts"
  >
    
@font-face {font-family:'Prumo';src:url('/pf/resources/fonts/prumo/Prumo-LNVF.woff2') format('woff2-variations'); font-weight: 90; font-display: swap;}
@font-face {font-family:'Prumo Italic';src:url('/pf/resources/fonts/prumo/Prumo-ItalicLNVF.woff2') format('woff2-variations'); font-weight: 90; font-display: swap;}

  </style>
</div>
`;

exports[`Components - outputType - criticalCss - GetFonts should match snapshot for arcSite = "ott" 1`] = `<div />`;
